2001-03-29  Fernando Nasser  <fnasser@redhat.com>

	* library/variable.tcl (update): Cope with varobj type changes.

2001-03-29  Fernando Nasser  <fnasser@redhat.com>

	* library/variable.tcl (destructor): Remove file_changed_hook hook.

2001-03-29  Fernando Nasser  <fnasser@redhat.com>

	* generic/gdbtk-varobj.c (variable_obj_command): Do not cache varobj
	handles as they may change -- use varobj_get_handle() instead.

2001-03-15  Martin Hunt  <hunt@redhat.com>
	* library/browserwin.itb: Change all references to freeze_me,
	thaw_me and Top to _freeze_me, _thaw_me, and _top to match 
	changes to managedwin.
	
	* library/kod.itb: Ditto.  

2001-03-15  Tom Tromey  <tromey@redhat.com>

	* library/mempref.itb (MemPref::build_win): Correctly set initial
	value of combobox.
	* library/memwin.itb: Added copyright header.
	(MemWin::constructor): Set defaults from preference database.
	(MemWin::reconfig): Update preference database.
	* library/prefs.tcl (pref_save): Save `mem' preferences.
	(pref_set_defaults): Define default memory preferences.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* generic/gdbtk-cmds.c (map_arg_registers): Use REG_NUM instead of
	ARCH_REG_NUM.

2001-03-01  Nicholas Duffek  <nsd@redhat.com>

	* README.GDBTK: Minor spelling, grammar, and formatting fixes.

2001-03-01  Keith Seitz  <keiths@cygnus.com>

	* library/managedwin.ith: Move all implementations into
	managedwin.itb.
	(public variable nosize): Delete.
	(freeze_me, thaw_me, make_icon_window): Prepend with
	underscore to remind people these are not public
	methods/procs.
	(protected variable Top, screenwidth, screenheight): Ditto
	for these variables.
	(protected common manage_active, mainwindow): Delete.
	(enable): Delete.
	(reconfig): Add empty body.
	* library/managedwin.itb: Move all implementations from
	header here.
	Update all references to renamed variables/methods/procs.
	(destructor, restart, shutdown, _open, find) Let
	Itcl tell us which ManagedWins we have lying around.